--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.5.1",
+    "@reduxjs/toolkit": "^1.1.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "firebase": "^7.5.0",
