--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "redux": "^4.0.4",
-    "redux-starter-kit": "^1.0.1"
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
