--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.4.1",
     "firebase": "^7.5.0",
     "firebase-tools": "^7.9.0",
+    "material-ui-dropzone": "^2.4.7",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
