--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
     "@date-io/date-fns": "1.x",
     "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.5.1",
-    "@material-ui/pickers": "^3.2.8",
+    "@material-ui/pickers": "^3.2.9",
     "@reduxjs/toolkit": "^1.1.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "date-fns": "^2.9.0",
-    "firebase": "^7.5.0",
+    "firebase": "^7.6.1",
     "firebase-tools": "^7.9.0",
+    "material-ui-dropzone": "^2.4.7",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-dropzone": "^10.2.1",
     "react-icons-kit": "^1.3.1",
     "react-number-format": "^4.3.1",
     "react-redux": "^7.1.3",
