--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "1.x",
+    "@date-io/date-fns": "^2.0.1",
     "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/pickers": "^3.2.9",
     "@reduxjs/toolkit": "^1.1.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "date-fns": "^2.9.0",
     "firebase": "^7.6.1",
     "firebase-tools": "^7.9.0",
     "material-ui-dropzone": "^2.4.7",
@@ -19,6 +20,7 @@
     "react-dom": "^16.12.0",
     "react-dropzone": "^10.2.1",
     "react-icons-kit": "^1.3.1",
+    "react-number-format": "^4.3.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
